# preview

./: README.md  ROADMAP.md  index.html  package-lock.json  package.json  settings.html  vite.config.ts
docs/: architecture.md
examples/: sample.md
src/: api.ts  formats.ts  main.ts  settings.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: formats.rs  fsx.rs  lib.rs  main.rs  markdown.rs  settings.rs  translate.rs  watch.rs
src/app/: bootstrap.ts  viewer-host.ts
src/features/: appearance.ts  copy.ts  find.ts  sidebar.ts
src/shared/: dom.ts  highlight.ts  schedule.ts
src/viewers/: contracts.ts  html.ts  image.ts  markdown.ts  message.ts  registry.ts
src/viewers/text/: contracts.ts  registry.ts  source-mode.ts  viewer.ts
